2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Parser.java: Set the
	interp result directly instead of trying
	to append to the result object since appending
	is known to not work.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/pkgIndex.tcl:
	* src/jacl/tcl/lang/Interp.java:
	* src/tcljava/tcl/lang/BlendExtension.java:
	* unix/tools/vutil/current:
	* win/makefile.vc: Update version numbers
	in files as a result of running `make dist`.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Update version number to 1.3.1.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl:
	* README.tclblend: Update to mention that scripts
	need to be installed before running and that
	Tcl 8.4.4 is the min 8.4 version that Tcl Blend
	can be used with.

2003-07-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): If linking
	with the jvm.lib from the JDK fails, link
	with our own import lib for jvm.dll.
	* win/libjvm.dll.a: Add import lib created
	using instructions from the following URL:
	http://www.inonit.com/cygwin/jni/invocationApi/archive.html

2003-05-30  Kenneth H. Cox  <tclunit@attbi.com>

	* src/native/javaInterp.c (BTestCmd): Change
	C++ style comment to C style comment.

2003-04-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.tclblend: Update min version of the
	Tcl Thread package to 2.5.2. This avoids
	a configure bug in the 2.5.1 release that
	shows up when building in the srcdir.

2003-03-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/JavaDefineClassCmd.java (cmdProc):
	Convert each char to a byte instead of calling
	String.getBytes() which returns bytes in the
	platform's default encoding.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>

	Add tcljava-130-2003-03-17 tag to mark the
	1.3.0 release.

2003-03-17  Mo DeJong  <mdejong@users.sourceforge.net>
